
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;


 int ASN_OCTET_STRING ;
 int * asn_append_len (int *,int) ;

__attribute__((used)) static u_char *
asn_append_octet_string (u_char *pkt, u_char *str, int nlen)
{
 int i = 0;

 *pkt++ = ASN_OCTET_STRING;
 pkt = asn_append_len (pkt, nlen);

 while (nlen--)
  *pkt++ = str[i++];

 return (pkt);
}
